fixed callback-tittle font sizes on mobile devices

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -671,7 +671,15 @@ footer {
     }
 }
 
+
+
+
+
+
 //adaptive design starts here
+
+
+
 
 
 
@@ -871,6 +879,15 @@ footer {
 }
 
 @media screen and (max-width: 767px) {
+
+    .callback-tittle {
+        h3 {
+            font-size: 5vw;
+        }
+        p {
+            font-size: 4vw;
+        }
+    }
 
     .about-right {
         width: 100%;
